# ml-intern-codex

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  release-please-config.json
.agents/skills/: hf-hub-maintainer  hf-literature-research  ml-runtime-conventions  runtime-artifact-contract
.github/workflows/: release-assets.yml  release-please.yml
crates/mli-app-server/: Cargo.toml
crates/mli-app-server/src/: lib.rs  server.rs
crates/mli-artifacts/: Cargo.toml
crates/mli-artifacts/src/: lib.rs  manifest.rs  preview.rs
crates/mli-cli/: Cargo.toml
crates/mli-cli/src/: main.rs
crates/mli-cli/tests/: process_smoke.rs
crates/mli-codex-bridge/: Cargo.toml
crates/mli-codex-bridge/src/: bridge.rs  lib.rs
crates/mli-config/: Cargo.toml
crates/mli-config/src/: app_config.rs  lib.rs
crates/mli-protocol/: Cargo.toml
crates/mli-protocol/src/: lib.rs  methods.rs  notifications.rs
crates/mli-repo/: Cargo.toml
crates/mli-repo/src/: artifact_repo.rs  lib.rs  thread_repo.rs  transcript_repo.rs  turn_repo.rs
crates/mli-runtime/: Cargo.toml
crates/mli-runtime/src/: lib.rs  session.rs  state.rs
crates/mli-services/: Cargo.toml
crates/mli-services/src/: artifacts.rs  lib.rs  runtime_environment.rs  skills.rs  threads.rs
crates/mli-skills/: Cargo.toml
crates/mli-skills/src/: discovery.rs  lib.rs
crates/mli-tui/: Cargo.toml
crates/mli-tui/src/: app.rs  bottom_pane.rs  completion.rs  custom_terminal.rs  diff_view.rs  exec_render.rs  fullscreen.rs  history_cell.rs  human_time.rs  inline_tui.rs  insert_history.rs  key_hint.rs  lib.rs  local_path.rs  markdown.rs  markdown_render.rs  markdown_stream.rs  overlay.rs  renderer.rs  startup_banner.rs  terminal_cleanup.rs  terminal_palette.rs  tui_session.rs  wrapping.rs
crates/mli-tui/src/render/: highlight.rs  mod.rs
crates/mli-tui/src/render/.agents/skills/: hf-dataset-audit  hf-jobs-operator  hf-space-troubleshooter
crates/mli-types/: Cargo.toml
crates/mli-types/src/: artifacts.rs  ids.rs  lib.rs  skills.rs  threads.rs  ui.rs
crates/mli-upstream-protocol/: Cargo.toml
crates/mli-upstream-protocol/src/: app_server.rs  lib.rs
docs/: IMPLEMENTATION_STATUS.md  PRD.md  SPEC.md  TEST_PLAN.md  USER_FLOWS.md
helpers/node/: package.json
helpers/node/src/: index.mjs
helpers/python/: README.md  pyproject.toml
helpers/python/src/mli_helpers/: __init__.py
helpers/python/src/mli_helpers/artifacts/: __init__.py  _writer.py  write_dataset_audit.py  write_job_snapshot.py  write_paper_report.py
helpers/python/tests/: test_artifact_writers.py
scripts/: install-remote.sh  install.sh  package-release.sh
skills/system/hf-dataset-audit/: SKILL.md
skills/system/hf-hub-maintainer/: SKILL.md
skills/system/hf-jobs-operator/: SKILL.md
skills/system/hf-literature-research/: SKILL.md
skills/system/hf-space-troubleshooter/: SKILL.md
skills/system/ml-runtime-conventions/: SKILL.md
tests/e2e/: README.md
