[package]
name = "mli-app-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mli_app_server"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
mli-config.workspace = true
mli-protocol.workspace = true
mli-runtime.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
