[package]
name = "mli-tui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "mli_tui"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
dirs.workspace = true
mli-protocol.workspace = true
mli-runtime.workspace = true
mli-types.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
regex-lite.workspace = true
serde.workspace = true
serde_json.workspace = true
supports-color.workspace = true
textwrap.workspace = true
tracing.workspace = true
unicode-segmentation.workspace = true
unicode-width.workspace = true
url.workspace = true
