[project]
name = "mli-helpers"
version = "0.1.0"
description = "Local helper runtime hooks for ml-intern-codex"
requires-python = ">=3.11"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
